enable XZ in defconfig

--- a/arch/arm/configs/ncx_defconfig
+++ b/arch/arm/configs/ncx_defconfig
@@ -44,9 +44,11 @@ CONFIG_LOCALVERSION="-ncx"
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
-CONFIG_KERNEL_GZIP=y
+CONFIG_HAVE_KERNEL_XZ=y
+# CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_LZMA is not set
 # CONFIG_KERNEL_LZO is not set
+CONFIG_KERNEL_XZ=y
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
@@ -179,7 +181,6 @@ CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_DEADLINE=y
-CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_BFQ=y
 
 # CONFIG_DEFAULT_SIO is not set
