--- a/arch/arm/configs/ncx_defconfig
+++ b/arch/arm/configs/ncx_defconfig
@@ -19,7 +19,7 @@ CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_GENERIC_LOCKBREAK=y
-CONFIG_RWSEM_XCHGADD_ALGORITHM=y
+CONFIG_RWSEM_GENERIC_SPINLOCK=y
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
 CONFIG_GENERIC_HWEIGHT=y
@@ -40,16 +40,16 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 CONFIG_LOCALVERSION="-ncx"
-# CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
-CONFIG_HAVE_KERNEL_LZO=y
 CONFIG_HAVE_KERNEL_XZ=y
+CONFIG_HAVE_KERNEL_LZO=y
 # CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_LZMA is not set
-# CONFIG_KERNEL_LZO is not set
 CONFIG_KERNEL_XZ=y
-CONFIG_SWAP=y
+# CONFIG_KERNEL_LZO is not set
+# CONFIG_SWAP is not set
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
@@ -71,12 +71,10 @@ CONFIG_GENERIC_IRQ_SHOW=y
 #
 CONFIG_TREE_PREEMPT_RCU=y
 CONFIG_PREEMPT_RCU=y
+# CONFIG_RCU_TRACE is not set
 CONFIG_RCU_FANOUT=32
 # CONFIG_RCU_FANOUT_EXACT is not set
 # CONFIG_TREE_RCU_TRACE is not set
-CONFIG_RCU_BOOST=y
-CONFIG_RCU_BOOST_PRIO=1
-CONFIG_RCU_BOOST_DELAY=500
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=17
@@ -104,7 +102,7 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
-
+# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=10
@@ -319,6 +317,7 @@ CONFIG_TEGRA_EMC_SCALING_ENABLE=y
 CONFIG_VOLTAGE_CONTROL=y
 CONFIG_TEGRA_CPU_DVFS=y
 CONFIG_TEGRA_CORE_DVFS=y
+# CONFIG_CONFIG_TEGRA3_VARIANT_CPU_OVERCLOCK is not set
 CONFIG_TEGRA_IOVMM_SMMU=y
 # CONFIG_TEGRA_SMMU_BASE_AT_E0000000 is not set
 # CONFIG_TEGRA_IOVMM_SMMU_SYSFS is not set
@@ -330,13 +329,10 @@ CONFIG_WIFI_NVS_PROC_CREATE=y
 CONFIG_TEGRA_CLOCK_DEBUG_WRITE=y
 CONFIG_TEGRA_CLUSTER_CONTROL=y
 CONFIG_TEGRA_AUTO_HOTPLUG=y
-CONFIG_TEGRA_MC_EARLY_ACK=y
 CONFIG_TEGRA_MC_PROFILE=y
 CONFIG_TEGRA_EDP_LIMITS=y
 # CONFIG_TEGRA_INTERNAL_TSENSOR_EDP_SUPPORT is not set
 CONFIG_TEGRA_EMC_TO_DDR_CLOCK=1
-# CONFIG_TEGRA_INTERACTIVE_GOV_ON_EARLY_SUSPEND is not set
-# CONFIG_TEGRA_CONSERVATIVE_GOV_ON_EARLY_SUSPEND is not set
 # CONFIG_TEGRA_LEGACY_AUDIO is not set
 CONFIG_USB_HOTPLUG=y
 # CONFIG_TIWLAN_SDIO is not set
@@ -363,7 +359,6 @@ CONFIG_USB_DRV=y
 # CONFIG_TEGRA_WDT_RECOVERY is not set
 CONFIG_TEGRA_LP2_ARM_TWD=y
 CONFIG_ANDROID_RAM_CONSOLE_APPEND_PMIC_STATUS_BITS=y
-CONFIG_CMDLINE_OPTIONS=y
 
 #
 # Processor Type
@@ -450,7 +445,6 @@ CONFIG_LOCAL_TIMERS=y
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
-CONFIG_PREEMPT_COUNT=y
 CONFIG_HZ=100
 # CONFIG_THUMB2_KERNEL is not set
 CONFIG_AEABI=y
@@ -473,11 +467,12 @@ CONFIG_ZONE_DMA_FLAG=0
 CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
 CONFIG_KSM=y
+CONFIG_UKSM=y
+# CONFIG_KSM_LEGACY is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_SLUB_DEBUG_ON is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
-CONFIG_ALLOW_CPU_ALIGNMENT=y
 CONFIG_UACCESS_WITH_MEMCPY=y
 # CONFIG_SECCOMP is not set
 # CONFIG_CC_STACKPROTECTOR is not set
@@ -508,15 +503,18 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
-
-
+# CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
-
-
-CONFIG_CPU_FREQ_GOV_SMARTASS2=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
@@ -2574,11 +2572,10 @@ CONFIG_USB_ULPI=y
 CONFIG_USB_ULPI_VIEWPORT=y
 # CONFIG_NOP_USB_XCEIV is not set
 CONFIG_USB_TEGRA_OTG=y
-CONFIG_USB_HOST_MODE=y
+# CONFIG_USB_HOST_MODE is not set
 # CONFIG_UWB is not set
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
-# CONFIG_ZIMMER is not set
 # CONFIG_MMC_UNSAFE_RESUME is not set
 # CONFIG_MMC_CLKGATE is not set
 # CONFIG_MMC_EMBEDDED_SDIO is not set
@@ -3156,10 +3153,10 @@ CONFIG_DEBUG_MEMORY_INIT=y
 # CONFIG_DEBUG_CREDENTIALS is not set
 # CONFIG_BOOT_PRINTK_DELAY is not set
 # CONFIG_RCU_TORTURE_TEST is not set
+CONFIG_RCU_CPU_STALL_DETECTOR=y
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
+CONFIG_RCU_CPU_STALL_DETECTOR_RUNNABLE=y
 CONFIG_RCU_CPU_STALL_VERBOSE=y
-# CONFIG_RCU_CPU_STALL_INFO is not set
-# CONFIG_RCU_TRACE is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_DEBUG_BLOCK_EXT_DEVT is not set
 # CONFIG_DEBUG_FORCE_WEAK_PER_CPU is not set
@@ -3235,7 +3232,7 @@ CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=y
 CONFIG_CRYPTO_WORKQUEUE=y
 # CONFIG_CRYPTO_CRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
-CONFIG_CRYPTO_TEST=n
+# CONFIG_CRYPTO_TEST is not set
 
 #
 # Authenticated Encryption with Associated Data
@@ -3275,7 +3272,6 @@ CONFIG_CRYPTO_MICHAEL_MIC=y
 # CONFIG_CRYPTO_RMD256 is not set
 # CONFIG_CRYPTO_RMD320 is not set
 CONFIG_CRYPTO_SHA1=y
-CONFIG_CRYPTO_SHA1_ARM=y
 CONFIG_CRYPTO_SHA256=y
 # CONFIG_CRYPTO_SHA512 is not set
 # CONFIG_CRYPTO_TGR192 is not set
@@ -3285,7 +3281,6 @@ CONFIG_CRYPTO_SHA256=y
 # Ciphers
 #
 CONFIG_CRYPTO_AES=y
-CONFIG_CRYPTO_AES_ARM=y
 # CONFIG_CRYPTO_ANUBIS is not set
 CONFIG_CRYPTO_ARC4=y
 # CONFIG_CRYPTO_BLOWFISH is not set
@@ -3325,15 +3320,12 @@ CONFIG_CRYPTO_DEV_TEGRA_SE=y
 # Library routines
 #
 CONFIG_BITREVERSE=y
-CONFIG_GENERIC_STRNCPY_FROM_USER=y
-CONFIG_GENERIC_STRNLEN_USER=y
 CONFIG_GENERIC_FIND_LAST_BIT=y
 CONFIG_CRC_CCITT=y
 CONFIG_CRC16=y
 # CONFIG_CRC_T10DIF is not set
 # CONFIG_CRC_ITU_T is not set
 CONFIG_CRC32=y
-# CONFIG_CRC32_SELFTEST is not set
 CONFIG_CRC7=y
 CONFIG_LIBCRC32C=y
 CONFIG_ZLIB_INFLATE=y
